--- a/graphannis/Cargo.toml
+++ b/graphannis/Cargo.toml
@@ -19,13 +19,13 @@ lalrpop = {version = "0.19", features = ["lexer"]}
 regex = "1"
 
 [dependencies]
-boolean_expression = "0.3"
+boolean_expression = "0.4"
 csv = "1"
 fs2 = "0.4"
 graphannis-core = {path = "../core/", version = "^1.0"}
 graphannis-malloc_size_of = "1.0"
 graphannis-malloc_size_of_derive = "2.0"
-itertools = "0.9"
+itertools = "0.10"
 lalrpop-util = "0.19"
 lazy_static = "1.4"
 libc = "0.2"
@@ -33,7 +33,7 @@ linked-hash-map = "0.5"
 log = "0.4"
 page_size = "0.4"
 percent-encoding = "2.1"
-rand = {version = "0.7", features = ["small_rng"]}
+rand = {version = "0.8", features = ["small_rng"]}
 rayon = {version = "1.3", default-features = false}
 regex = "1"
 regex-syntax = "0.6"
@@ -42,9 +42,9 @@ serde = {version = "1.0", features = ["rc"]}
 serde_derive = "1.0"
 smallvec = "1.6"
 smartstring = {version = "0.2", features = ["serde"]}
-strum = "0.20"
-strum_macros = "0.20"
-sys-info = ">= 0.5.8, < 0.5.9"
+strum = "0.21"
+strum_macros = "0.21"
+sys-info = "0.9"
 tempfile = "3"
 thiserror = "1"
 toml = "0.5"
