--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Import GUM corpus
         run: ./target/release/annis data --cmd 'import relannis/GUM'
       - name: Import pcc2.1 corpus
-        run: t./target/release/annis data --cmd 'set-disk-based on' --cmd 'import relannis/pcc2.1'
+        run: ./target/release/annis data --cmd 'set-disk-based on' --cmd 'import relannis/pcc2.1'
       - name: Run integration tests
         run: cargo test --release -- --ignored
         working-directory: graphannis
