--- a/graphannis/Cargo.toml
+++ b/graphannis/Cargo.toml
@@ -15,7 +15,7 @@ crate-type = ["lib"]
 [build-dependencies]
 csv = "1"
 file_diff = "1"
-lalrpop = {version = "0.19", features = ["lexer"]}
+lalrpop = {version = "0.19", default_features = false, features = ["lexer"]}
 regex = "1"
 
 [dependencies]
