--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,13 +65,15 @@ jobs:
             data
           key: ${{ runner.os }}-search-tests-v1-compatible
       - name: Download test corpora if necessary
-        run: test -d relannis/GUM/ -a -d relannis/pcc2.1/ || "./misc/download-test-corpora.sh"
+        run: test -d relannis/GUM/ -a -d relannis/pcc2.1/ -a -d relannis/subtok.demo || "./misc/download-test-corpora.sh"
       - name: Build CLI binary (if one of the data directories is missing)
-        run: test -d data/GUM/current -a -d data/pcc2.1/current || cargo build --release --bin annis
+        run: test -d data/GUM/current -a -d data/pcc2.1/current -a -d data/subtok.demo/current || cargo build --release --bin annis
       - name: Import GUM corpus if necessary
         run: test -d data/GUM/current || ./target/release/annis data --cmd 'import relannis/GUM'
       - name: Import pcc2.1 corpus if necessary
         run: test -d data/pcc2.1/current || ./target/release/annis data --cmd 'set-disk-based on' --cmd 'import relannis/pcc2.1'
+      - name: Import subtok.demo corpus if necessary
+        run: test -d data/subtok.demo/current || ./target/release/annis data--cmd 'import relannis/subtok.demo'
       - name: Run integration tests
         run: cargo test --release -- --ignored
         working-directory: graphannis
