--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Import GUM corpus
         if: steps.corpus-cache.outputs.cache-hit != 'true'
         run: ./target/release/annis data --cmd 'import relannis/GUM'
-      - name: Import pcc2.1 corpus-cache
+      - name: Import pcc2.1 corpus
         if: steps.corpus-cache.outputs.cache-hit != 'true'
         run: ./target/release/annis data --cmd 'set-disk-based on' --cmd 'import relannis/pcc2.1'
       - name: Import subtok.demo corpus
