Enforce static code analysis checks for pull requests.
This includes proper formatting and clippy warnings.

--- a/.github/workflows/static_code_analysis.yml
+++ b/.github/workflows/static_code_analysis.yml
@@ -6,6 +6,7 @@ on:
 name: Static code analysis
 jobs:
   static_code_analysis:
+    name: "Static code analysis"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
