--- a/bors.toml
+++ b/bors.toml
@@ -3,4 +3,5 @@ status = [
   "Execute automated tests on Windows",
   "Execute automated tests on OSX",
   "Execute search tests",
+  "Static code analysis",
 ]
