Only use a "main" branch instead of gitflow and update the documentation accordingly.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
 name: Automated tests
 on:
   push:
-    branches: [master, develop, staging, trying]
+    branches: [main, staging, trying]
   pull_request:
-    branches: [master, develop]
+    branches: [main]
 env:
   RUSTFLAGS: "-C debuginfo=0"
 jobs:
