--- a/.github/workflows/static_code_analysis.yml
+++ b/.github/workflows/static_code_analysis.yml
@@ -1,8 +1,8 @@
 on:
   push:
-    branches: [master, develop, staging, trying]
+    branches: [main, staging, trying]
   pull_request:
-    branches: [master, develop]
+    branches: [main]
 name: Static code analysis
 jobs:
   static_code_analysis:
