Increase number of temporary disk tables used in the disk map.
Since we can now disable the block cache for evicted C0 disk tables this does not lead to an increased memory usage when there are a large amount of temporary files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,12 @@
 [workspace]
-members = ["core", "graphannis", "cli", "capi", "webservice", "examples/tutorial"]
+members = [
+    "core",
+    "graphannis",
+    "cli",
+    "capi",
+    "webservice",
+    "examples/tutorial"
+]
+
+[patch.crates-io]
+sstable = { path = "../sstable" }
