Use released version of sstable 0.9.0 for feature with block cache

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,9 @@
 [workspace]
 members = [
-    "core",
-    "graphannis",
-    "cli",
-    "capi",
-    "webservice",
-    "examples/tutorial"
+  "core",
+  "graphannis",
+  "cli",
+  "capi",
+  "webservice",
+  "examples/tutorial",
 ]
-
-[patch.crates-io]
-sstable = { path = "../sstable" }
