More readable time specifcation for long running CLI actions

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,15 +11,16 @@ version = "1.3.0"
 
 [dependencies]
 anyhow = "1"
-clap = {version = "2", default-features = false}
+clap = { version = "2", default-features = false }
 criterion = "0.3"
-graphannis = {path = "../graphannis/", version = "^1.0"}
+graphannis = { path = "../graphannis/", version = "^1.0" }
 log = "0.4"
 prettytable-rs = "0.8"
 rustyline = "9"
 rustyline-derive = "0.5"
 simplelog = "0.10"
 toml = "0.5"
+compound_duration = "1"
 
 [[bin]]
 name = "annis"
