Actually use a cache instead of a diskmap, that might get slow when the maximum capacity is reached

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,6 +17,7 @@ graphannis-malloc_size_of_derive = "2.0"
 itertools = "0.10"
 lazy_static = "1.4"
 log = "0.4"
+lru = "0.7"
 num-traits = "0.2"
 percent-encoding = "2.1"
 quick-xml = "0.22"
