--- a/about.toml
+++ b/about.toml
@@ -1,11 +1,16 @@
 accepted = [
-    "Apache-2.0",
-    "MIT",
-    "BSD-3-Clause",
-    "BSD-2-Clause",
-    "MPL-2.0",
-    "CC0-1.0",
-    "ISC",
-    "Zlib",
-    "OpenSSL",
+  "Apache-2.0",
+  "MIT",
+  "BSD-3-Clause",
+  "BSD-2-Clause",
+  "BSL-1.0",
+  "MPL-2.0",
+  "CC0-1.0",
+  "ISC",
+  "Zlib",
+  "OpenSSL",
+]
+
+workarounds = [
+  "ring",
 ]
