Use a different cache implementation which uses no unsafe code internally.
What we try to avoid is costly lookup possibly on a disk based annotation storage.
So the cache does not need constant access time but "just" needs to beat the disk while not using unlimited main memory.

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,8 +16,8 @@ graphannis-malloc_size_of = {version = "1.1", features = ["smartstring"]}
 graphannis-malloc_size_of_derive = "2.0"
 itertools = "0.10"
 lazy_static = "1.4"
+lfu = "0.2"
 log = "0.4"
-lru = "0.7"
 num-traits = "0.2"
 percent-encoding = "2.1"
 quick-xml = "0.22"
