--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -35,6 +35,7 @@ strum = "0.21"
 strum_macros = "0.21"
 tempfile = "3.1"
 thiserror = "1"
+transient-btree-index = "0.1"
 
 [target.'cfg(windows)'.dependencies]
 winapi = {version = "0.3", features = ["heapapi"]}
