--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,6 +12,7 @@ version = "1.5.0"
 
 [dependencies]
 bincode = "1.2"
+generic-array = "0.14"
 graphannis-malloc_size_of = {version = "1.1", features = ["smartstring"]}
 graphannis-malloc_size_of_derive = "2.0"
 itertools = "0.10"
