--- a/graphannis/Cargo.toml
+++ b/graphannis/Cargo.toml
@@ -15,14 +15,14 @@ crate-type = ["lib"]
 [build-dependencies]
 csv = "1.1"
 file_diff = "1"
-lalrpop = { version = "0.19", default_features = false, features = ["lexer"] }
+lalrpop = {version = "0.19", default_features = false, features = ["lexer"]}
 regex = "1"
 
 [dependencies]
 boolean_expression = "0.4"
 csv = "1"
 fs2 = "0.4"
-graphannis-core = { path = "../core/", version = "^1" }
+graphannis-core = {path = "../core/", version = "^1"}
 graphannis-malloc_size_of = "1.0"
 graphannis-malloc_size_of_derive = "2.0"
 itertools = "0.10"
@@ -33,21 +33,22 @@ linked-hash-map = "0.5"
 log = "0.4"
 page_size = "0.4"
 percent-encoding = "2.1"
-rand = { version = "0.8", features = ["small_rng"] }
-rayon = { version = "1.3", default-features = false }
+rand = {version = "0.8", features = ["small_rng"]}
+rayon = {version = "1.3", default-features = false}
 regex = "1"
 regex-syntax = "0.6"
 rustc-hash = "1.0"
-serde = { version = "1.0", features = ["rc"] }
+serde = {version = "1.0", features = ["rc"]}
 serde_derive = "1.0"
 smallvec = "1.6"
-smartstring = { version = "0.2", features = ["serde"] }
+smartstring = {version = "0.2", features = ["serde"]}
 strum = "0.21"
 strum_macros = "0.21"
 sys-info = "0.9"
 tempfile = "3"
 thiserror = "1"
 toml = "0.5"
+transient-btree-index = "0.2"
 zip = "0.5"
 
 [dev-dependencies]
