Configure spellright VSCode extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,13 @@
     },
     "files.watcherExclude": {
         "**/target/**": true
-    }
+    },
+    "spellright.language": [
+        "en_US"
+    ],
+    "spellright.documentTypes": [
+        "markdown",
+        "latex",
+        "plaintext"
+    ]
 }
