--- a/graphannis/Cargo.toml
+++ b/graphannis/Cargo.toml
@@ -5,7 +5,7 @@ description = "This is a new backend implementation of the ANNIS linguistic sear
 edition = "2018"
 license = "Apache-2.0"
 name = "graphannis"
-readme = "crate-info.md"
+readme = "../README.md"
 repository = "https://github.com/korpling/graphANNIS"
 version = "1.5.0"
 
