Define ExecutionNode as iterator over `Result`s and return iterators over `Result`s in several functions of the `GraphStorage` trait.
This includes
- EdgeContainer#get_outgoing_edges
- EdgeContainer#get_ingoing_edges
- GraphStorage#find_connected
- GraphStorage#find_connected_inverse
- GraphStorage#distance

--- a/capi/Cargo.toml
+++ b/capi/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["staticlib", "cdylib"]
 [dependencies]
 anyhow = "1"
 graphannis = {path = "../graphannis/", version = "^1.0"}
+itertools = "0.10"
 libc = "0.2"
 log = "0.4"
 simplelog = {version = "0.10"}
