Adapt to breaking changes in cargo-release 0.19.0

--- a/release.toml
+++ b/release.toml
@@ -1,6 +1,5 @@
-sign-commit = true
 sign-tag = true
 dev-version-ext = "dev"
-no-dev-version = true
+dev-version = false
 consolidate-commits = true
 pre-release-hook = ["cargo", "test"]
