Inform debugger we are using Rust

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -56,6 +56,9 @@
                     "--lib"
                 ]
             },
+            "sourceLanguages": [
+                "rust"
+            ],
             "cwd": "${workspaceRoot}"
         }
     ]
