Add cache to avoid re-calculating the left_token value for a node

--- a/graphannis/Cargo.toml
+++ b/graphannis/Cargo.toml
@@ -32,6 +32,7 @@ lazy_static = "1.4"
 libc = "0.2"
 linked-hash-map = "0.5"
 log = "0.4"
+lru = "0.7"
 memmap2 = "0.5"
 page_size = "0.4"
 percent-encoding = "2.1"
