Add lexer feature to avoid compilation issues with 2021 edition of Rust.
See https://github.com/lalrpop/lalrpop/issues/650

--- a/graphannis/Cargo.toml
+++ b/graphannis/Cargo.toml
@@ -27,7 +27,7 @@ graphannis-core = {path = "../core/", version = "^2"}
 graphannis-malloc_size_of = "1.0"
 graphannis-malloc_size_of_derive = "2.0"
 itertools = "0.10"
-lalrpop-util = "0.19"
+lalrpop-util = {version = "0.19", features = ["lexer"]}
 lazy_static = "1.4"
 libc = "0.2"
 linked-hash-map = "0.5"
