--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ref-lcov.info
-          path: ./target/coverage/lcov.info
+          path: ./target/coverage/tests.lcov
 
   checks:
     runs-on: ubuntu-latest
@@ -93,7 +93,7 @@ jobs:
         uses: barecheck/code-coverage-action@v1
         with:
           barecheck-github-app-token: ${{ secrets.BARECHECK_GITHUB_APP_TOKEN }}
-          lcov-file: "./target/coverage/lcov.info"
+          lcov-file: "./target/coverage/tests.lcov"
           base-lcov-file: "./lcov.info"
           minimum-ratio: 0 # Fails Github action once code coverage is decreasing
           send-summary-comment: true
