--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -13,7 +13,12 @@ jobs:
         with:
           toolchain: stable
           profile: minimal
+          components: llvm-tools-preview
       - uses: Swatinem/rust-cache@v1.3.0
+      - uses: SierraSoftworks/setup-grcov@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          version: latest
       - uses: actions/cache@v2
         id: corpus-cache
         with:
@@ -60,7 +65,12 @@ jobs:
         with:
           toolchain: stable
           profile: minimal
+          components: llvm-tools-preview
       - uses: Swatinem/rust-cache@v1.3.0
+      - uses: SierraSoftworks/setup-grcov@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          version: latest
       - uses: actions/cache@v2
         id: corpus-cache
         with:
