--- a/webservice/Cargo.toml
+++ b/webservice/Cargo.toml
@@ -35,3 +35,6 @@ thiserror = "1"
 uuid = {version = "0.8", features = ["v4"]}
 walkdir = "2"
 zip = "0.6.4"
+
+[dev-dependencies]
+pretty_assertions = "1.3"
