--- a/.github/workflows/static_code_analysis.yml
+++ b/.github/workflows/static_code_analysis.yml
@@ -1,8 +1,10 @@
 on:
   push:
-    branches: [main, staging, trying]
+    branches: [main]
   pull_request:
     branches: [main]
+  merge_group:
+    
 name: Static code analysis
 jobs:
   static_code_analysis:
