--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,11 @@
 name: Automated tests
 on:
   push:
-    branches: [main, staging, trying]
+    branches: [main]
   pull_request:
     branches: [main]
+  merge_group:
+
 env:
   RUSTFLAGS: "-C debuginfo=0"
 jobs:
