--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,19 @@ members = [
   "examples/tutorial",
 ]
 
+# Config for 'cargo dist'
+[workspace.metadata.dist]
+# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
+cargo-dist-version = "0.4.2"
+# CI backends to support
+ci = ["github"]
+# The installers to generate for each app
+installers = []
+# Target platforms to build apps for (Rust target-triple syntax)
+targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
+# Publish jobs to run in CI
+pr-run-mode = "plan"
+
 # Use release optimization of some of the performance sensitive crates even for debug builds.
 # This allows faster builds and debugging of our own code, while balancing performance.
 [profile.dev.package.bincode]
@@ -30,3 +43,8 @@ opt-level = 3
 
 [profile.dev.package.zip]
 opt-level = 3
+
+# The profile that 'cargo dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
