--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,11 +12,11 @@ version = "2.4.8"
 
 [dependencies]
 bincode = "1.2"
+clru = "0.6.1"
 graphannis-malloc_size_of = {version = "2", features = ["smartstring"]}
 graphannis-malloc_size_of_derive = "2.0"
 itertools = "0.10"
 lazy_static = "1.4"
-lfu = "0.2"
 log = "0.4"
 num-traits = "0.2"
 percent-encoding = "2.1"
