Do not estimate size with graphannis-malloc_size_of.
The corpus storage now just measures the total memory used for the process and removes corpora from the cache until the threshold is reached.
The DiskMap implementation only implements a fixed number of entries as eviction strategy.

Using graphannis-malloc_size_of meant we were bound to the sytems allocator and e.g. could not change it to jemalloc in case we want fix memory fragmentation issues.

--- a/graphannis/Cargo.toml
+++ b/graphannis/Cargo.toml
@@ -24,8 +24,6 @@ csv = "1"
 extsort = "0.4"
 fs2 = "0.4"
 graphannis-core = {path = "../core/", version = "^3"}
-graphannis-malloc_size_of = "2"
-graphannis-malloc_size_of_derive = "2.0"
 itertools = "0.10"
 lalrpop-util = {version = "0.19", features = ["lexer"]}
 lazy_static = "1.4"
@@ -34,6 +32,7 @@ linked-hash-map = "0.5"
 log = "0.4"
 lru = "0.7"
 memmap2 = "0.5"
+memory-stats = "1.1.0"
 page_size = "0.4"
 percent-encoding = "2.1"
 rand = {version = "0.8", features = ["small_rng"]}
