--- a/webservice/Cargo.toml
+++ b/webservice/Cargo.toml
@@ -36,5 +36,8 @@ uuid = {version = "0.8", features = ["v4"]}
 walkdir = "2"
 zip = "0.6.4"
 
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+tikv-jemallocator = "0.5"
+
 [dev-dependencies]
 pretty_assertions = "1.3"
