--- a/webservice/Cargo.toml
+++ b/webservice/Cargo.toml
@@ -14,7 +14,6 @@ actix-files = "0.6"
 actix-web = "4"
 anyhow = "1"
 bcrypt = "0.10"
-chrono = "0.4"
 clap = {version = "2", default-features = false}
 config = {version = "0.13", default-features = false, features = ["toml"]}
 diesel = {version = "2.0.4", default-features = false, features = ["sqlite", "r2d2"]}
@@ -41,3 +40,7 @@ tikv-jemallocator = "0.5"
 
 [dev-dependencies]
 pretty_assertions = "1.3"
+
+
+[package.metadata.cargo-machete]
+ignored = ["libsqlite3-sys"]
