--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -25,6 +25,11 @@ toml = "0.5"
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = "0.5"
 
+[dev-dependencies]
+insta-cmd = "0.4"
+insta = {version = "1.34.0", features = ["filters"]}
+assert_cmd = "2.0.12"
+
 [[bin]]
 name = "annis"
 
