enable debug messages when running tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
           profile: minimal
       - uses: Swatinem/rust-cache@v2.2.1
       - run: cargo build --all-features --verbose
-      - run: cargo test --all-features --verbose
+      - run: RUST_LOG=debug cargo test --all-features --verbose
       - run: misc/download-mdbook.sh 0.3.5
         env:
           OS_NAME: linux
@@ -37,7 +37,7 @@ jobs:
           profile: minimal
       - uses: Swatinem/rust-cache@v2.2.1
       - run: cargo build --all-features --verbose
-      - run: cargo test --all-features --verbose
+      - run: RUST_LOG=debug cargo test --all-features --verbose
   test_mac:
     name: Execute automated tests on OSX
     runs-on: macos-11
@@ -49,7 +49,7 @@ jobs:
           profile: minimal
       - uses: Swatinem/rust-cache@v2.2.1
       - run: cargo build --all-features --verbose
-      - run: cargo test --all-features --verbose
+      - run: RUST_LOG=debug cargo test --all-features --verbose
   long_running_tests:
     name: Execute search tests
     runs-on: ubuntu-20.04
