--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -46,8 +46,12 @@ jobs:
         run: cargo llvm-cov clean --workspace
       - name: Run tests code coverage (standard tests)
         run: cargo llvm-cov --no-report --release
+        env:
+          RUSTFLAGS: "-C link-dead-code"
       - name: Run tests code coverage (ignored tests)
         run: cargo llvm-cov --no-report --release -- --ignored
+        env:
+          RUSTFLAGS: "-C link-dead-code"
       - name: Merge code coverage reports
         run: cargo llvm-cov report --ignore-filename-regex '(tests?\.rs)|(capi/.*)' --release --codecov --output-path codecov.json
       - name: Upload coverage to Codecov
