--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,6 +16,7 @@ clru = "0.6.1"
 itertools = "0.10"
 lazy_static = "1.4"
 log = "0.4"
+nohash-hasher = "0.2.0"
 num-traits = "0.2"
 percent-encoding = "2.1"
 quick-xml = "0.28"
