--- a/.github/workflows/static_code_analysis.yml
+++ b/.github/workflows/static_code_analysis.yml
@@ -12,10 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1.0.6
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.8.0
         with:
-          toolchain: stable
-          profile: minimal
           components: clippy, rustfmt
       - uses: Swatinem/rust-cache@v2.7.3
       - uses: actions-rs/cargo@v1.0.1
