--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1.0.6
-        with:
-          toolchain: stable
-          profile: minimal
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.8.0
       - uses: Swatinem/rust-cache@v2.7.3
       - run: cargo build --all-features --verbose
       - run: cargo test --all-features --verbose
@@ -33,10 +30,7 @@ jobs:
     runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1.0.6
-        with:
-          toolchain: stable
-          profile: minimal
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.8.0
       - uses: Swatinem/rust-cache@v2.7.3
       - run: cargo build --all-features --verbose
       - run: cargo test --all-features --verbose
@@ -47,10 +41,7 @@ jobs:
     runs-on: macos-11
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1.0.6
-        with:
-          toolchain: stable
-          profile: minimal
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.8.0
       - uses: Swatinem/rust-cache@v2.7.3
       - run: cargo build --all-features --verbose
       - run: cargo test --all-features --verbose
@@ -61,10 +52,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1.0.6
-        with:
-          toolchain: stable
-          profile: minimal
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.8.0
       - uses: Swatinem/rust-cache@v2.7.3
       - uses: actions/cache@v4
         id: corpus-cache
