--- a/.github/workflows/static_code_analysis.yml
+++ b/.github/workflows/static_code_analysis.yml
@@ -6,20 +6,25 @@ on:
   merge_group:
     
 name: Static code analysis
+
 jobs:
-  static_code_analysis:
-    name: "Static code analysis"
+  format:
+    name: Format Code
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rust-lang/setup-rust-toolchain@v1.8.0
-        with:
-          components: clippy, rustfmt
-      - uses: actions-rs/cargo@v1.0.1
-        with:
-          command: fmt
-          args: -- --check
-      - uses: actions-rs/clippy-check@v1.0.7
+      - uses: actions/checkout@v3
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.4.4
+      - uses: mbrobbel/rustfmt-check@0.5.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features
+  static_code_analysis:
+    name: Static code analysis
+    needs: format
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.4.4
+        with:
+          components: clippy
+      - uses: actions/checkout@v3
+      - name: Check with clippy with all features enabled
+        run: cargo clippy --all-features -- -D warnings
