--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,6 +17,7 @@ clru = "0.6.1"
 itertools = "0.10"
 lazy_static = "1.4"
 log = "0.4"
+normpath = "1.1.1"
 num-traits = "0.2"
 percent-encoding = "2.1"
 quick-xml = "0.28"
