--- a/graphannis/Cargo.toml
+++ b/graphannis/Cargo.toml
@@ -54,6 +54,7 @@ zip = "0.6.4"
 [dev-dependencies]
 criterion = "0.4"
 fake = "2.2"
+insta = "1.34.0"
 pretty_assertions = "1.3"
 same-file = "1.0.6"
 serial_test = "2"
