--- a/.github/workflows/release_capi.yml
+++ b/.github/workflows/release_capi.yml
@@ -2,9 +2,12 @@ on:
   release:
     types:
       - released
+  pull_request:
+    types: [labeled]
 name: Append C-API artifact to latest release
 jobs:
   deploy_linux_binaries:
+    if: ${{ github.event.label.name == 'test-release-process' || github.event_name == 'release' }}
     runs-on: ubuntu-20.04
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -29,6 +32,7 @@ jobs:
           tag: ${{ steps.latest-release.outputs.release}}
 
   deploy_windows_binaries:
+    if: ${{ github.event.label.name == 'test-release-process' || github.event_name == 'release' }}
     runs-on: windows-2019
     steps:
       - id: latest-release
@@ -51,6 +55,7 @@ jobs:
           artifactContentType: application/x-dosexec
           tag: ${{ steps.latest-release.outputs.release}}
   deploy_macos_binaries:
+    if: ${{ github.event.label.name == 'test-release-process' || github.event_name == 'release' }}
     runs-on: macos-11
     steps:
       - id: latest-release
