Change release trigger for creating the C-API artifacts to "published"

--- a/.github/workflows/release_capi.yml
+++ b/.github/workflows/release_capi.yml
@@ -1,7 +1,6 @@
 on:
   release:
-    types:
-      - released
+    types: [published]
   pull_request:
     types: [labeled]
 name: Append C-API artifact to latest release
