Add test for already loaded graph storage and use debug logging in search tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,8 @@ jobs:
   long_running_tests:
     name: Execute search tests
     runs-on: ubuntu-20.04
+    env:
+      RUST_LOG: debug
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rust-lang/setup-rust-toolchain@v1.8.0
