--- a/graphannis/Cargo.toml
+++ b/graphannis/Cargo.toml
@@ -52,6 +52,7 @@ transient-btree-index = "0.5"
 zip = "0.6.4"
 
 [dev-dependencies]
+assert_matches = "1.5.0"
 criterion = "0.5"
 fake = "2.2"
 insta = "1.34.0"
