--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,6 +16,7 @@ bincode = "1.2"
 clru = "0.6.1"
 itertools = "0.10"
 lazy_static = "1.4"
+toml = "0.8"
 log = "0.4"
 memmap2 = "0.9"
 normpath = "1.1.1"
