--- a/graphannis/Cargo.toml
+++ b/graphannis/Cargo.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0"
 name = "graphannis"
 readme = "../README.md"
 repository = "https://github.com/korpling/graphANNIS"
-version = "3.4.0"
+version = "3.5.0"
 
 [lib]
 crate-type = ["lib"]
@@ -15,16 +15,19 @@ crate-type = ["lib"]
 [build-dependencies]
 csv = "1.1"
 file_diff = "1"
-lalrpop = {version = "0.20", default-features = false, features = ["lexer", "unicode"]}
+lalrpop = { version = "0.20", default-features = false, features = [
+    "lexer",
+    "unicode",
+] }
 regex = "1"
 
 [dependencies]
 boolean_expression = "0.4"
 csv = "1"
 fs2 = "0.4"
-graphannis-core = {path = "../core/", version = "^3"}
+graphannis-core = { path = "../core/", version = "^3" }
 itertools = "0.10"
-lalrpop-util = {version = "0.20", features = ["lexer"]}
+lalrpop-util = { version = "0.20", features = ["lexer"] }
 lazy_static = "1.4"
 libc = "0.2"
 linked-hash-map = "0.5"
@@ -33,15 +36,15 @@ lru = "0.7"
 memory-stats = "1.1.0"
 page_size = "0.4"
 percent-encoding = "2.1"
-rand = {version = "0.8", features = ["small_rng"]}
-rayon = {version = "1.3", default-features = false}
+rand = { version = "0.8", features = ["small_rng"] }
+rayon = { version = "1.3", default-features = false }
 regex = "1"
 regex-syntax = "0.8"
 rustc-hash = "1.0"
-serde = {version = "1.0", features = ["rc"]}
+serde = { version = "1.0", features = ["rc"] }
 serde_derive = "1.0"
 smallvec = "1.6"
-smartstring = {version = "1", features = ["serde"]}
+smartstring = { version = "1", features = ["serde"] }
 strum = "0.21"
 strum_macros = "0.21"
 sys-info = "0.9"
