--- a/webservice/Cargo.toml
+++ b/webservice/Cargo.toml
@@ -6,7 +6,7 @@ license = "Apache-2.0"
 name = "graphannis-webservice"
 readme = "crate-info.md"
 repository = "https://github.com/korpling/graphANNIS"
-version = "3.4.0"
+version = "3.5.0"
 
 [dependencies]
 actix-cors = "0.6"
@@ -14,24 +14,27 @@ actix-files = "0.6"
 actix-web = "4"
 anyhow = "1"
 bcrypt = "0.10"
-clap = {version = "2", default-features = false}
-config = {version = "0.13", default-features = false, features = ["toml"]}
-diesel = {version = "2.0.4", default-features = false, features = ["sqlite", "r2d2"]}
-diesel_migrations = {version = " 2", default-features = false}
+clap = { version = "2", default-features = false }
+config = { version = "0.13", default-features = false, features = ["toml"] }
+diesel = { version = "2.0.4", default-features = false, features = [
+    "sqlite",
+    "r2d2",
+] }
+diesel_migrations = { version = " 2", default-features = false }
 futures = "0.3"
-graphannis = {path = "../graphannis/", version = "^3"}
-graphannis-core = {path = "../core/", version = "^3"}
+graphannis = { path = "../graphannis/", version = "^3" }
+graphannis-core = { path = "../core/", version = "^3" }
 jsonwebtoken = "7.2"
-libsqlite3-sys = {version = "0.26.0", features = ["bundled"]}
+libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
 log = "0.4"
 percent-encoding = "2.1"
 r2d2 = "0.8"
-serde = {version = "1.0", features = ["rc"]}
+serde = { version = "1.0", features = ["rc"] }
 serde_derive = "1.0"
 simplelog = "0.12"
 tempfile = "3"
 thiserror = "1"
-uuid = {version = "0.8", features = ["v4"]}
+uuid = { version = "0.8", features = ["v4"] }
 walkdir = "2"
 zip = "0.6.4"
 
