--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,34 +16,36 @@ bincode = "1.2"
 clru = "0.6.1"
 itertools = "0.10"
 lazy_static = "1.4"
-toml = "0.8"
 log = "0.4"
 memmap2 = "0.9"
 normpath = "1.1.1"
 num-traits = "0.2"
 percent-encoding = "2.1"
 quick-xml = "0.28"
-rand = { version = "0.8", features = ["small_rng"] }
-rayon = { version = "1.3", default-features = false }
+rand = {version = "0.8", features = ["small_rng"]}
+rayon = {version = "1.3", default-features = false}
 regex = "1"
 regex-syntax = "0.8"
 rustc-hash = "1.0"
-serde = { version = "1.0", features = ["rc"] }
+serde = {version = "1.0", features = ["rc"]}
 serde_bytes = "0.11"
 serde_derive = "1.0"
 smallvec = "1.6"
-smartstring = { version = "1", features = ["serde"] }
+smartstring = {version = "1", features = ["serde"]}
 sstable = "0.11"
 strum = "0.21"
 strum_macros = "0.21"
 tempfile = "3.1"
 thiserror = "1"
+toml = "0.8"
 transient-btree-index = "0.5"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["heapapi"] }
+winapi = {version = "0.3", features = ["heapapi"]}
 
 [dev-dependencies]
 env_logger = "0.9"
 fake = "2.2"
+insta = {version = "1.38.0", features = ["json"]}
 pretty_assertions = "1.3"
+serde_json = "1.0"
